# C_Project

./: ~$לה 1 מערכתות תכנות.docx  מטלה 1 מערכתות תכנות.docx
Debug_code/: debug_main.c  makefile
part_1/: CMakeLists.txt  main.c  makefile  other.h  output.out
part_2/: CMakeLists.txt  makefile
part_2/src/: main.c
part_3/: CMakeLists.txt  main.c  main.out  makefile  mathlib.c
part_4/: CMakeLists.txt  main.c  main.out  makefile
part_5/: CMakeLists.txt  advmath.c  advmath.h  main.c  main.out  makefile  mathlib.c  mathlib.h
